# agentize

./: .agentize.yaml  .gitignore  CLAUDE.md  Makefile  README.md  test-all.sh
.claude-plugin/: marketplace.json
.claude-plugin/hooks/: pre-tool-use.py
.claude/commands/: refine-issue.md
.claude/hooks/: logger.py  pre-tool-use.py
.claude/skills/external-consensus/: SKILL.md
.cursor/: README.md  hooks.json
.cursor/hooks/: before-prompt-submit.py
.github/workflows/: project.yaml
claude/: CLAUDE.md  CUSTOMIZATION_GUIDE.md  README.md  settings.json
claude/agents/: code-reviewer.md  doc-architect.md  doc-researcher.md  idea-comprehensive-analyzer.md  idea-creative-proposer.md  idea-critical-checker.md  input-validator.md  issue-analyzer.md  issue-creator.md  issue-researcher.md  milestone-generator.md  pre-commit-gate.md
claude/commands/: README.md  gen-milestone.md  git-commit.md  idea-to-issues.md  issue-to-impl.md  spawn-worktree.md  ultra-planner.md  work-on-issue.md
claude/rules/: issue-pr-format.md  milestone-guide.md  project-board-integration.md
claude/skills/ci-checks/: CI-REFERENCE.md  SKILL.md
claude/skills/git-commit/: SKILL.md
claude/skills/issue-templates/: SKILL.md
claude/skills/milestone/: SKILL.md
claude/skills/pr-templates/: SKILL.md
claude/skills/workflow-reference/: SKILL.md
claude/templates/: CLAUDE.md.template  PROJECT_CONFIG.md  docs-CLAUDE.md.template  git-tags.template.md  project-Makefile.template  project-README.md.template  project-gitignore.template  project-setup.sh.template
docs/: CLAUDE.md  OPTIONS.md  README.md  agents.md  commands.md  git-msg-tags.md  milestone-workflow.md  skills.md
docs/architecture/: project.md  test-infrastructure.md
docs/draft/: create-issue.md  open-pr.md  plan-impl.md  plan-workflow.md  roadmap.md  test-infra-tmp-migration-20251221-162147.md
docs/feat/: README.md
docs/tutorial/: README.md
python/agentize/permission/: determine.py  rules.py
python/agentize/server/: README.md  __init__.py  __main__.py
sandbox/: Dockerfile  README.md  entrypoint.sh  install.sh  run.md  run.py  run.sh
scripts/: agentize-init.sh  install.sh  wt-cli.sh
src/cli/: README.md
templates/: README.md
templates/c/: CMakeLists.txt  Makefile  README.md
templates/c/include/__NAME__/: hello.h
templates/c/src/: hello.c  main.c
templates/c/tests/: test_hello.c
templates/cxx/: CMakeLists.txt  Makefile  README.md  bootstrap.sh
templates/cxx/include/: hello.hpp
templates/cxx/include/__NAME__/: hello.hpp
templates/cxx/src/: hello.cpp  main.cpp
templates/cxx/tests/: test_hello.cpp  test_main.cpp
templates/python/: README.md  pyproject.toml
templates/python/src/__NAME__/: __init__.py  main.py
templates/python/tests/: test_main.py
tests/: CLAUDE.md  README.md  sandbox-path-test.sh  test-agentize-init-zsh.sh  test-all.sh  test-c-sdk.sh  test-cxx-sdk.sh  test-init-mode.sh  test-port-mode.sh
tests/cli/: test-hook-permission-matching.sh
tests/e2e/: test-ccr-logs-permission.sh  test-sandbox-build.sh  test-sandbox-slurm-attach.sh  test-sandbox-slurm-new.sh  test-sandbox-slurm-reset.sh  test-sandbox-slurm-rm.sh
tests/handsoff/: test-external-consensus-issue-interface.sh
